# siglent-sdm-mcp

./: .gitignore  README.md  pyproject.toml
siglent_sdm_mcp/: __init__.py  __main__.py  scpi_connection.py  server.py
